k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cricket-api
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  tls:
    - hosts:
        - api.YOUR_DOMAIN_HERE
      secretName: cricket-api-tls
  rules:
    - host: api.YOUR_DOMAIN_HERE
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cricket-api
                port:
                  number: 80
